re-make json file of meshdata in all prefectures.

--- a/ScrapingGeoJSONData.ipynb
+++ b/ScrapingGeoJSONData.ipynb
@@ -154,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -168,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pref = \"u'type': u'FeatureCollection', u'crs': {u'type': u'name',u'properties': {u'name': u'urn:ogc:def:crs:EPSG::4612'}},u'features':\"\n",
@@ -177,33 +181,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "geojson_file = open('./data/geojson/all_prefecture.json', 'w')\n",
-    "geojson_file.writelines(str(features))"
+    "geojson_file.writelines('{'+str(features)+'}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{u'geometry': {u'coordinates': [[[141.2625, 42.9916666666667],\n",
-       "    [141.275, 42.9916666666667],\n",
-       "    [141.275, 43],\n",
-       "    [141.2625, 43],\n",
-       "    [141.2625, 42.9916666666667]]],\n",
+       "{u'geometry': {u'coordinates': [[[123.025, 24.4666666666667],\n",
+       "    [123.0375, 24.4666666666667],\n",
+       "    [123.0375, 24.475],\n",
+       "    [123.025, 24.475],\n",
+       "    [123.025, 24.4666666666667]]],\n",
        "  u'type': u'Polygon'},\n",
-       " u'properties': {u'code': u'64413291'},\n",
+       " u'properties': {u'code': u'36235062'},\n",
        " u'type': u'Feature'}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
