--- a/MeshStaticsVisualization.ipynb
+++ b/MeshStaticsVisualization.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "func = 'jobsmesh'\n",
-    "apikey = 'ANwbR7yIsQMZ2LM'"
+    "apikey = ''"
    ]
   },
   {
@@ -202,12 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from ipywidgets import interact"
+   ]
   },
   {
    "cell_type": "code",
